# ChangeDetection

./: .gitignore  README.md  setup.cfg  setup.py
src/ChangeDetection/: __init__.py  detection.py  key_detection.py  line_search.py  relationship_detection.py
tests/: test_key_detection.py  test_line_search.py  test_relationship_detection.py
