[metadata]
name = ChangeDetection
version = attr: ChangeDetection.__version__
url = https://github.com/willi-z/mdd
project_urls =
    Source Code = https://github.com/willi-z/msys
    Issue Tracker = https://github.com/willi-z/msys/issues/

license = BSD-3-Clause
author = WILLI Zschiebsch


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error